line on progress

--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
     <label for="square">Square</label><br>
     <input type="radio" id="rectangle" name="draw" value="rectangle">
     <label for="square">Rectangle</label><br>
+    <input type="radio" id="line" name="draw" value="line">
+    <label for="line">Line</label><br>
     <input type="radio" id="change_square" name="draw" value="change_square">
     <label for="change_square">Change Square</label><br>
+    <input type="radio" id="change_line" name="draw" value="change_line">
+    <label for="change_line">Change Line</label><br>
 
     <input id="color_input" type="color"><br>
 
@@ -45,6 +49,7 @@
     <script src="./scripts/models/color.js"></script>
     <script src="./scripts/utils/utils.js"></script>
     <script src="./scripts/shapes/square.js"></script>
+    <script src="./scripts/shapes/line.js"></script>
     <script src="./scripts/master.js"></script>
     <script src="./scripts/utils/initShader.js"></script>
     <script src="./scripts/utils/init.js"></script>
