fix bug change color polygon

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                             <li>Untuk membuat polygon baru pastikan checxbox "Make Poly" pada posisi unchecklist</li>
                             <li>Pilih radio button Shape "Polygon" dan checklist pada checxbox "Make Poly"</li>
                             <li>Arahkan kursor ke drawing space</li>
-                            <li>Klik sebanyak 2 kali untuk menentukan letak 2 titik awal</li>
+                            <li>Klik di tempat yang berbeda sebanyak 2 kali untuk menentukan letak 2 titik awal</li>
                             <li>Untuk titik ke-3 dan selanjutnya klik lalu drag hingga shape terbentuk sesuai keinginan</li>
-                            <li>*Catatan: polygon yang terbentuk menggunakan 'TRIANGLE_FAN' seingga setiap segitiga yang terbentuk akan mengacu pada titik awal dan titik sebelumnya</li>
+                            <li>*Catatan: polygon yang terbentuk menggunakan 'TRIANGLE_FAN' sehingga setiap segitiga yang terbentuk akan mengacu pada titik awal dan titik sebelumnya</li>
                         </ul>
                     </div>
                     <div class="help-item">
