add change node polygon

--- a/index.html
+++ b/index.html
@@ -22,28 +22,28 @@
             <div class="tools">
                 <h2 class="tools-title">Tools</h2>
                 <div class="menu">
-                        <div class="menu-title">Shape</div>
-                        :
-                        <div class="menu-item">
-                            <div>
-                                <input type="radio" id="line" name="draw" value="line">
-                            Line
+                    <div class="menu-title">Shape</div>
+                    :
+                    <div class="menu-item">
+                        <div>
+                            <input type="radio" id="line" name="draw" value="line">
+                            <label for="line">Line</label>
                         </div>
                         <div>
                             <input type="radio" id="square" name="draw" value="square">
-                            Square
+                            <label for="square">Square</label>
                         </div>
                         <div>
                             <input type="radio" id="rectangle" name="draw" value="rectangle">
-                            Rectangle
+                            <label for="rectangle">Rectangle</label>
                         </div>
                         <div>
                             <input type="radio" id="polygon" name="draw" value="polygon">
-                            Polygon
+                            <label for="polygon">Polygon</label>
                         </div>
                         <div>
                             <input type="checkbox" id="make_poly" name="polyAct">
-                            Make Poly
+                            <label for="make_poly">Make Poly</label>
                         </div>
                     </div>
                 </div>
@@ -53,15 +53,19 @@
                     <div class="menu-item">
                         <div>
                             <input type="radio" id="change_line" name="draw" value="change_line">
-                            Change Line
+                            <label for="change_line">Line</label>
                         </div>
                         <div>
                             <input type="radio" id="change_square" name="draw" value="change_square">
-                            Change Square
+                            <label for="change_square">Square</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="change_polygon" name="draw" value="change_color_polygon">
+                            <label for="change_polygon"></label>Polygon
                         </div>
                         <div>
                             <input type="radio" id="change_color_polygon" name="draw" value="change_color_polygon">
-                            Change Poly Color
+                            <label for="change_color_polygon"></label>Poly Color
                         </div>
                     </div>
                 </div>
