--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
                             Color : 
                             <input id="color_input" type="color" value="#ff0000">
                         </div>
-                        <button id="import_btn">Import</button>
-                        <button id="export_btn">Export</button>
+                        <!-- <button id="import_btn">Import</button> -->
+                        <button id="export">Export</button>
+                        <input  class="form-control form-control-sm" type="file" id="load" accept=".json,application/json"/>
                         <button onclick="location.reload();">Clear Drawing Space</button>
                     </div>
                 </div>
