--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
                             Color : 
                             <input id="color_input" type="color" value="#ff0000">
                         </div>
-                        <!-- <button id="import_btn">Import</button> -->
                         <button id="export">Export</button>
-                        <input  class="form-control form-control-sm" type="file" id="load" accept=".json,application/json"/>
+                        <input  class="form-control form-control-sm" type="file" id="import" accept=".json,application/json"/>
                         <button onclick="location.reload();">Clear Drawing Space</button>
                     </div>
                 </div>
@@ -128,17 +127,17 @@
                         </ul>
                     </div>
                     <div class="help-item">
-                        <h4>Membuka Pekerjaan yang Disimpan</h4>
+                        <h4>Menyimpan Hasil Pekerjaan</h4>
                         <ul>
-                            <li>Klik button "Import"</li>
-                            <li>Cari file berformat "...." hasil export sebelumnya lalu klik "Select"</li>
+                            <li>Klik tombol "Export"</li>
+                            <li>Pilih opsi penyimpanan sesuai dialog browser lalu klik "OK"</li>
                         </ul>
                     </div>
                     <div class="help-item">
-                        <h4>Menyimpan Hasil Pekerjaan</h4>
+                        <h4>Membuka Pekerjaan yang Disimpan</h4>
                         <ul>
-                            <li>Klik button "Export"</li>
-                            <li>Pilih lokasi penyimpanan lalu klik "Save"</li>
+                            <li>Klik tombol "Browse" atau "Telusuri" di sebelah tombol Export</li>
+                            <li>Cari file "models.json" hasil export sebelumnya lalu klik "Select". File import harus berformat .json</li>
                         </ul>
                     </div>
                 </div>
