--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <div class="help-item">
                         <h4>Membuka Pekerjaan yang Disimpan</h4>
                         <ul>
-                            <li>Klik tombol "Browse" atau "Telusuri" di sebelah tombol Export</li>
+                            <li>Klik tombol "Import"</li>
                             <li>Cari file "models.json" hasil export sebelumnya lalu klik "Select". File import harus berformat .json</li>
                         </ul>
                     </div>
